tools/tests/errors/surf_lib_23.ki
# zlib.decompress of a too-short stream must raise.
var z = import("zlib")
discard z.decompress(Bytes([1, 2, 3]))
